--- a/contactme.html
+++ b/contactme.html
@@ -77,7 +77,7 @@
   </div>
   
   <!-- Mario Buttons -->
-    <a href="STARTINGPAGE.html" class="coin-button">
+    <a href="index.html" class="coin-button">
       <img src="allImages/constantlayoutImages/mario dice.webp" alt="mario coin" width="70px">
     </a>
 
