--- a/inspiration.html
+++ b/inspiration.html
@@ -34,7 +34,7 @@
   </div>
   
    <!-- Mario Buttons -->
-    <a href="STARTINGPAGE.html" class="coin-button">
+    <a href="index.html" class="coin-button">
       <img src="allImages/constantlayoutImages/mario dice.webp" alt="mario coin" width="70px">
     </a>
 
