--- a/microbit.html
+++ b/microbit.html
@@ -200,7 +200,7 @@ can beat the amazing Microbit?</p>
   <audio id="sound-effect" src="sounds/item roll.mp3" preload="auto" loop></audio>
 
 	<!-- Mario Buttons -->
-	  <a href="STARTINGPAGE.html" class="coin-button">
+	  <a href="index.html" class="coin-button">
 		<img src="allImages/constantlayoutImages/mario dice.webp" alt="mario coin" width="70px">
 	  </a>
 
