--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
   <audio id="sound-effect" src="sounds/item roll.mp3" preload="auto" loop></audio>
 
 <!-- Mario Buttons -->
-  <a href="STARTINGPAGE.html" class="coin-button">
+  <a href="index.html" class="coin-button">
     <img src="allImages/constantlayoutImages/mario dice.webp" alt="mario coin" width="70px">
   </a>
 
