--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
 <body>
 
 <!-- Mario Dice Block -->
- <a href="STARTINGPAGE.html" class="coin-button">
+ <a href="index.html" class="coin-button">
     <img src="allImages/constantlayoutImages/mario dice.webp" alt="mario coin" width="70px">
   </a>
  
