--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			  <a href="inspiration.html" class="item" tabindex="0" data-text="Select Inspiration-Page">
 				<img src="allImages/STARTINGPAGEImages/fireflower.webp" alt="banana peel" height="50px">
 			  </a>
-			  <a href="turtleacademy.html" class="item" tabindex="0" data-text="Select Turtle-Academy Portfolio">
+			  <a href="TURTLEACADEMY.html" class="item" tabindex="0" data-text="Select Turtle-Academy Portfolio">
 				<img src="allImages/STARTINGPAGEImages/shell.png" alt="koopa shell" height="50px">
 			  </a>
 			  <a href="microbit.html" class="item" tabindex="0" data-text="Select Microbit-Page">
