--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 	  <p>Click anywhere to listen to some tunes! 🎵</p>
       <p>This was my first major website project back in high school. We were instructed to create a site about our favorite artist, so I chose Meghan Trainor! 💖<br>
         The website includes fun facts, concert schedules, music video highlights, and a Contact form.</p>
-		<a href="CW Year End Project/Year End Project.html" target="_blank">
+		<a href="CW Year End Project/yearendproject.html" target="_blank">
 		  <img src="allImages/projectsImages/peach.webp" alt="princess peach" class="peach-link">
 		</a>
 
